--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -156,6 +156,7 @@
 <!ENTITY Ctr_hidezoomres	"Zoom-Schaltflächen auf Leisten: verstecke Schaltfläche 'Normalgröße'">
 <!ENTITY Ctr_alt_newtabp	"Seite 'Neuer Tab' (about:newtab): alternative Darstellung">
 <!ENTITY Ctr_ctroldsearch	"Alte 'Suche'">
+<!ENTITY Ctr_ctroldsearchc	"Eingabefeld nach der Suche leeren">
 <!ENTITY Ctr_addonmanager	"Add-on Manager">
 <!ENTITY Ctr_alt_addonsp	"'Mehr Info'-Seite: alternative Anordnung">
 <!ENTITY Ctr_alt_addonsm	"Alternative Darstellung">
