--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -156,6 +156,7 @@
 <!ENTITY Ctr_hidezoomres	"Nadzorni gumbi za povečavo na orodni vrstici: skrij gumb za ponastavitev povečave">
 <!ENTITY Ctr_alt_newtabp	"Stran novega zavihka (about:newtab): nadomestni videz">
 <!ENTITY Ctr_ctroldsearch	"Staro iskanje">
+<!ENTITY Ctr_ctroldsearchc	"Clear searchbox after search">
 <!ENTITY Ctr_addonmanager	"Upravitelj dodatkov">
 <!ENTITY Ctr_alt_addonsp	"Stran dodatkov 'Več': nadomestni videz">
 <!ENTITY Ctr_alt_addonsm	"Nadomestni videz">
