--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -156,6 +156,7 @@
 <!ENTITY Ctr_hidezoomres	"Управління масштабом на панелі: приховати кнопку скидання масштабу">
 <!ENTITY Ctr_alt_newtabp	"Сторінка нової вкладки (about:newtab): альтернативний вигляд">
 <!ENTITY Ctr_ctroldsearch	"Старий пошук">
+<!ENTITY Ctr_ctroldsearchc	"Clear searchbox after search">
 <!ENTITY Ctr_addonmanager	"Менеджер додатків">
 <!ENTITY Ctr_alt_addonsp	"Сторінка «Детальніше» в Додатках: альтернативний вигляд">
 <!ENTITY Ctr_alt_addonsm	"Менеджер додатків: альтернативний вигляд">
