--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -156,6 +156,7 @@
 <!ENTITY Ctr_hidezoomres	"当缩放控制按钮在工具栏上时: 隐藏重置缩放按钮">
 <!ENTITY Ctr_alt_newtabp	"新标签页页面 (about:newtab): 备选的外观">
 <!ENTITY Ctr_ctroldsearch	"旧式搜索">
+<!ENTITY Ctr_ctroldsearchc	"Clear searchbox after search">
 <!ENTITY Ctr_addonmanager	"附加组件管理器">
 <!ENTITY Ctr_alt_addonsp	"附加组件“更多”页面: 备选的外观">
 <!ENTITY Ctr_alt_addonsm	"附加组件管理器: 备选的外观">
