--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -156,6 +156,7 @@
 <!ENTITY Ctr_hidezoomres	"Boutons de zoom (si sur une barre d'outils) : Masquer le bouton 'Réinitialiser le niveau de zoom'">
 <!ENTITY Ctr_alt_newtabp	"Page 'Nouvel onglet' (about:newtab) : apparence alternative">
 <!ENTITY Ctr_ctroldsearch	"Ancienne recherche">
+<!ENTITY Ctr_ctroldsearchc	"Clear searchbox after search">
 <!ENTITY Ctr_addonmanager	"Add-on manager">
 <!ENTITY Ctr_alt_addonsp	"Page 'Plus d'infos' des modules : apparence alternative">
 <!ENTITY Ctr_alt_addonsm	"Alternative appearance">
