--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -83,17 +83,17 @@
 <!ENTITY Ctr_appbutton2io	"Auf der &brandShortName; Titelleiste (nur Symbol)">
 <!ENTITY Ctr_paneluibtweak	"Zeige Menüschaltfläche als &brandShortName;-Schaltfläche...">
 <!ENTITY Ctr_paneluibtweak2	"...auf der Tableiste">
-<!ENTITY Ctr_appbuttonc_o	"Farbe: orange (Standard)">
-<!ENTITY Ctr_appbuttonc_a	"Farbe: blau (Aurora)">
-<!ENTITY Ctr_appbuttonc_n	"Farbe: schwarz (Nightly)">
-<!ENTITY Ctr_appbuttonc_t	"Farbe: transparent">
-<!ENTITY Ctr_appbuttonc_p	"Farbe: blau (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"Farbe: rot">
-<!ENTITY Ctr_appbuttonc_g	"Farbe: grün">
-<!ENTITY Ctr_appbuttonc_gr	"Farbe: grau">
-<!ENTITY Ctr_appbuttonc_pu	"Farbe: lila">
-<!ENTITY Ctr_appbuttonc_wh	"Farbe: weiß">
-<!ENTITY Ctr_appbuttonc_cu	"Farbe: eigene Definition">
+<!ENTITY Ctr_appbuttonc_o	"Orange Schaltflächenfarbe (Standard)">
+<!ENTITY Ctr_appbuttonc_a	"Blaue Schaltflächenfarbe (Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"Schwarze Schaltflächenfarbe (Nightly)">
+<!ENTITY Ctr_appbuttonc_t	"Transparente Schaltfläche">
+<!ENTITY Ctr_appbuttonc_p	"Blaue Schaltflächenfarbe (Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"Rote Schaltflächenfarbe">
+<!ENTITY Ctr_appbuttonc_g	"Grüne Schaltflächenfarbe">
+<!ENTITY Ctr_appbuttonc_gr	"Graue Schaltflächenfarbe">
+<!ENTITY Ctr_appbuttonc_pu	"Violette Schaltflächenfarbe (Privatmodus)">
+<!ENTITY Ctr_appbuttonc_wh	"Weiße Schaltflächenfarbe">
+<!ENTITY Ctr_appbuttonc_cu	"Eigene Schaltflächenfarbe">
 <!ENTITY Ctr_appbuttonct	"Eigene Farbe für Schaltfläche auf Symbolleisten">
 <!ENTITY Ctr_appbuttonI1	"Nach einer Änderung wird ein Neustart empfohlen.">
 <!ENTITY Ctr_appbuttonI1e	"Die &brandShortName;-Schaltfläche ist auf der Windows Titelleiste nicht sichtbar!">
@@ -238,8 +238,8 @@
 <!ENTITY Ctr_icopageinfo	"Ein Klick auf das Symbol öffnet das 'Seiteninfo'-Fenster">
 <!ENTITY Ctr_lbsbsize		"Benutzerdefinierte Breite für die Adressleiste und die Suchleiste">
 <!ENTITY Ctr_searchbar		"Suchleiste">
-<!ENTITY Ctr_lbsugresi		"Ergebnisse im Aufklappmenü möglichst ohne Bildlaufleiste anzeigen">
-<!ENTITY Ctr_lbsugres		"Anzahl der Ergebnisse im Aufklappmenü (about:config Einstellung)">
+<!ENTITY Ctr_lbsugresi		"Vorschläge im Aufklappmenü ohne Bildlaufleiste anzeigen (wenn möglich)">
+<!ENTITY Ctr_lbsugres		"Anzahl der Vorschläge im Aufklappmenü (about:config Einstellung)">
 
 <!ENTITY Ctr_menubar_items	"Position der Menüeinträge">
 <!ENTITY Ctr_extrabar		"Extraleisten">
@@ -265,7 +265,7 @@
 <!ENTITY Ctr_hidetbwote2	"Titelleiste beibehalten (Tabs oben)">
 <!ENTITY Ctr_notabfog		"Hintergrundnebel entfernen (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_notabbg		"Hintergrundfarbe entfernen (Windows AeroGlass / Win8)">
-<!ENTITY Ctr_hightabpos		"Höhere Position (falls möglich)">
+<!ENTITY Ctr_hightabpos		"Abstand über der Leiste reduzieren (falls möglich)">
 <!ENTITY Ctr_alttabstb		"Alternative Hintergrundfarbe">
 <!ENTITY Ctr_alttabstb2		"Im maximierten Fenster (Tabs oben)">
 
