--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -78,9 +78,9 @@
 <!ENTITY Ctr_appbutton0		"Кнопка вимкнена">
 <!ENTITY Ctr_appbutton1		"Кнопка на панелі">
 <!ENTITY Ctr_appbutton1wt	"Кнопка на панелі (тільки текст)">
-<!ENTITY Ctr_appbutton2		"Кнопка на [&brandShortName;] панелі заголовку">
-<!ENTITY Ctr_appbutton2h	"Кнопка на [&brandShortName;] панелі заголовку (прихована)">
-<!ENTITY Ctr_appbutton2io	"Кнопка на [&brandShortName;] панелі заголовку (тільки іконка)">
+<!ENTITY Ctr_appbutton2		"Кнопка на панелі заголовку &brandShortName;">
+<!ENTITY Ctr_appbutton2h	"Кнопка на панелі заголовку &brandShortName; (прихована)">
+<!ENTITY Ctr_appbutton2io	"Кнопка на панелі заголовку &brandShortName; (тільки іконка)">
 <!ENTITY Ctr_paneluibtweak	"Оранжева кнопка меню на панелі вкладок">
 <!ENTITY Ctr_paneluibtweak2	" ">
 <!ENTITY Ctr_appbuttonc_o	"Оранжева кнопка (типово)">
@@ -94,7 +94,7 @@
 <!ENTITY Ctr_appbuttonc_pu	"Фіолетова кнопка">
 <!ENTITY Ctr_appbuttonc_wh	"Біла кнопка">
 <!ENTITY Ctr_appbuttonc_cu	"Вибрати колір кнопки">
-<!ENTITY Ctr_appbuttonct	"Custom button color for button on toolbar">
+<!ENTITY Ctr_appbuttonct	"Налаштовуваний колір кнопки на панелі">
 <!ENTITY Ctr_appbuttonI1	"рекомендовано перезапуск">
 <!ENTITY Ctr_appbuttonI1e	"Не видно в рядку заголовку Windows OS, тільки в &brandShortName; заголовку!">
 <!ENTITY Ctr_appbuttonI2	"Кольори кнопок видимі тільки на панелях заголовку і вкладок!">
@@ -156,7 +156,7 @@
 <!ENTITY Ctr_hidezoomres	"Управління масштабом на панелі: приховати кнопку скидання масштабу">
 <!ENTITY Ctr_alt_newtabp	"Сторінка нової вкладки (about:newtab): альтернативний вигляд">
 <!ENTITY Ctr_ctroldsearch	"Старий пошук">
-<!ENTITY Ctr_ctroldsearchc	"Clear searchbox after search">
+<!ENTITY Ctr_ctroldsearchc	"Очистити пошукове поле після пошуку">
 <!ENTITY Ctr_addonmanager	"Менеджер додатків">
 <!ENTITY Ctr_alt_addonsp	"Сторінка «Детальніше» в Додатках: альтернативний вигляд">
 <!ENTITY Ctr_alt_addonsm	"Менеджер додатків: альтернативний вигляд">
@@ -166,10 +166,10 @@
 <!ENTITY Ctr_addonversion	"Список додатків у Менеджері додатків: показати версію додатка">
 <!ENTITY Ctr_xpinstallui	"Менеджер додатків: старе вікно встановлення додатків (about:config preference)">
 <!ENTITY Ctr_bmbutton		"Кнопка меню закладок">
-<!ENTITY Ctr_bmbutpanelm	"Popup: вигляд меню панелі">
-<!ENTITY Ctr_bmbunsortbm	"Popup: субменю «несортованих закладок»">
-<!ENTITY Ctr_bmbviewbmtb	"Popup: show 'View Toolbar'">
-<!ENTITY Ctr_bmbnounsort	"Popup: hide 'unsorted bookmarks'">
+<!ENTITY Ctr_bmbutpanelm	"Спливаюче вікно: вигляд меню панелі">
+<!ENTITY Ctr_bmbunsortbm	"Спливаюче вікно: субменю «несортованих закладок»">
+<!ENTITY Ctr_bmbviewbmtb	"Спливаюче вікно: показати «Огляд панелі»">
+<!ENTITY Ctr_bmbnounsort	"Спливаюче вікно: приховати «несортовані закладки»">
 <!ENTITY Ctr_bmbutnotext	"Приховати ярлик на панелі закладок">
 <!ENTITY Ctr_skipprintpr	"Кнопка «Друк»: пропустити передогляд друку">
 <!ENTITY Ctr_tbconmenu		"Контекстне меню панелей: приховати «Перенести в меню», «Вилучити з панелі», «Оновити/закласти всі вкладки» та «Повернути закриту вкладку»">
@@ -220,7 +220,7 @@
 <!ENTITY Ctr_hideurelstop	"Приховати кнопку «Зупинити та Перезавантажити»">
 <!ENTITY Ctr_hideurlgo		"Приховати кнопку «Перейти»">
 <!ENTITY Ctr_hideurlsrg		"Приховати розділювачі та пробіли кнопок «перезавантажити, зупинити та перейти»">
-<!ENTITY Ctr_urlbardropm	"Move dropmarker to the last possible position">
+<!ENTITY Ctr_urlbardropm	"Рухати позначку випадного списку в останню можливу позицію">
 <!ENTITY Ctr_altreaderico	"Альтернативні іконки «Читача»">
 <!ENTITY Ctr_hideprbutton	"Приховати інфо кнопку «спливаюче вікно блоковано»">
 <!ENTITY Ctr_locsearchbw10	"Зменшити висоту панелей рядку адреси та пошуку (експериментальне)">
@@ -238,8 +238,8 @@
 <!ENTITY Ctr_icopageinfo	"Клік на іконку відкриває інформаційне вікно">
 <!ENTITY Ctr_lbsbsize		"Налаштовувана ширина для панелей рядку адреси та пошуку">
 <!ENTITY Ctr_searchbar		"Панель пошуку">
-<!ENTITY Ctr_lbsugresi		"Display as many results in suggestions popup as possible (without scrollbar)">
-<!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
+<!ENTITY Ctr_lbsugresi		"Відображати так багато результатів пропозицій у спливаючому вікні, як це можливо (без прокручування)">
+<!ENTITY Ctr_lbsugres		"Кількість результатів пропозицій у спливаючому вікні (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Позиція пунктів меню">
 <!ENTITY Ctr_extrabar		"Додаткові панелі інструментів">
@@ -322,7 +322,7 @@
 <!ENTITY Ctr_fx34loop		"В &brandShortName; 34+ введені особливості «виклику та сеансу зв’язку». Вимкнення цього параметру видалить їх.">
 <!ENTITY Ctr_fx35devtheme	"В &brandShortName; 35+ введено нову «тему» від розробника. Вимкнення цих налаштувань вимикає цю «тему» і її кнопку в ручному режимі налаштувань.">
 <!ENTITY Ctr_fx36prefs		"В &brandShortName; 36+ введено нове налаштування у вкладці. Вимкнення цього пункту відновлює вікно зі старими налаштуванням.">
-<!ENTITY Ctr_fx36prefs2		"Note: Old preference window does not contain all recently added browser preferences!">
+<!ENTITY Ctr_fx36prefs2		"Примітка: Старе вікно налаштувань не містить усі нещодавно додані настройки браузера!">
 <!ENTITY Ctr_fx38reader		"В &brandShortName; 38+ введено новий «режим читання». Вимкнення цього пункту вимикає цей режим та прибирає його іконку з панелі навігації.">
 <!ENTITY Ctr_fx38pocket		"В &brandShortName; 38.0.5+ введено режим «Кишеня». Вимкнення цього пункту вимикає цей режим та усуває його кнопку з панелей.">
 <!ENTITY Ctr_fx38pocket2	"Примітка: Переміщення кнопки «Кишеня» на сторінку «Пристосувати &brandShortName;» перед вимкненням цього налаштування також усуває написи «Кишеня» в закладках і меню читання.">
