Update czech lang

--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -156,7 +156,7 @@
 <!ENTITY Ctr_hidezoomres	"Přiblížit prvky na liště: skrýt tlačítko pro obnovení lupy">
 <!ENTITY Ctr_alt_newtabp	"Nový panel (about:newtab): alternativní vzhled">
 <!ENTITY Ctr_ctroldsearch	"Starý styl vyhledávání">
-<!ENTITY Ctr_ctroldsearchc	"Clear searchbox after search">
+<!ENTITY Ctr_ctroldsearchc	"Po vyhledávání vyčistit pole hledání">
 <!ENTITY Ctr_addonmanager	"Správce rozšíření">
 <!ENTITY Ctr_alt_addonsp	"Stránka rozšíření lišty 'další info': alternativní vzhled">
 <!ENTITY Ctr_alt_addonsm	"Správce rozšíření: alternativní vzhled">
@@ -167,9 +167,9 @@
 <!ENTITY Ctr_xpinstallui	"Správce rozšíření: starý vzhled (předvolba about:config)">
 <!ENTITY Ctr_bmbutton		"Tlačítko menu záložek">
 <!ENTITY Ctr_bmbutpanelm	"Popup: panel menu vzhledu">
-<!ENTITY Ctr_bmbunsortbm	"Popup: 'unsorted bookmarks' submenu">
-<!ENTITY Ctr_bmbviewbmtb	"Popup: show 'View Toolbar'">
-<!ENTITY Ctr_bmbnounsort	"Popup: hide 'unsorted bookmarks'">
+<!ENTITY Ctr_bmbunsortbm	"Popup: 'Netříděné záložky' v submenu">
+<!ENTITY Ctr_bmbviewbmtb	"Popup: ukázat 'Zobrazit lištu'">
+<!ENTITY Ctr_bmbnounsort	"Popup: skrýt 'Netříděné záložky'">
 <!ENTITY Ctr_bmbutnotext	"Skrýt návěští na liště záložek">
 <!ENTITY Ctr_skipprintpr	"Tlačítko tisku: přeskočit náhled tisku">
 <!ENTITY Ctr_tbconmenu		"Kontextové menu položek lišty: skrýt 'přesunout do nabídky', 'odebrat z lišty', 'obnovit/přidat do záložek všechny panely' a 'obnovit zavřený panel'">
@@ -200,7 +200,7 @@
 <!ENTITY Ctr_ntab_t			"nový panel">
 <!ENTITY Ctr_customsqtab1	"Pozadí">
 <!ENTITY Ctr_ctext			"Text">
-<!ENTITY Ctr_ctextsh		"Stín textu">
+<!ENTITY Ctr_ctextsh		"Stínovaný text">
 <!ENTITY Ctr_tabnor			"Panel (výchozí)">
 <!ENTITY Ctr_tabhov			"Panel (najetí myši)">
 <!ENTITY Ctr_tabact			"Panel (aktivní)">
@@ -220,10 +220,10 @@
 <!ENTITY Ctr_hideurelstop	"Skrýt tlačítka zastavit &amp; obnovit">
 <!ENTITY Ctr_hideurlgo		"Skrýt tlačítko 'přejít'">
 <!ENTITY Ctr_hideurlsrg		"Skrýt tlačítka 'obnovit, zastavit &amp; přejít' oddělovače &amp; mezery">
-<!ENTITY Ctr_urlbardropm	"Move dropmarker to the last possible position">
+<!ENTITY Ctr_urlbardropm	"Přesunout šipku na poslední pozici vpravo">
 <!ENTITY Ctr_altreaderico	"Alternativní ikona 'Readeru'">
 <!ENTITY Ctr_hideprbutton	"Nezobrazovat upozornění při blokování vyskakovacích oken">
-<!ENTITY Ctr_locsearchbw10	"Reduce location bars and search bars height (experimental)">
+<!ENTITY Ctr_locsearchbw10	"Snížit výšku adresního řádku a vyhledávače (experimentální)">
 <!ENTITY Ctr_urlbar_ib		"Tlačítko identity webu (identity box)">
 <!ENTITY Ctr_ib_nohovcolor	"Nezobrazovat šedou barvu při přejetí myší">
 <!ENTITY Ctr_ib_graycolor	"Šedá barva pro neznámou identitu a stránky chrome">
@@ -236,10 +236,10 @@
 <!ENTITY Ctr_padlock_mod	"moderní">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;' ikona pro validní chrome stránky">
 <!ENTITY Ctr_icopageinfo	"Klik na ikonu otevře okno 'informace o stránce'">
-<!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
-<!ENTITY Ctr_searchbar		"Search bar">
-<!ENTITY Ctr_lbsugresi		"Display as many results in suggestions popup as possible (without scrollbar)">
-<!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
+<!ENTITY Ctr_lbsbsize		"Volitelná šířka pro adresní řádek a vyhledávač">
+<!ENTITY Ctr_searchbar		"Vyhledávač">
+<!ENTITY Ctr_lbsugresi		"Zobrazit počet možných návrhů (bez posuvníku)">
+<!ENTITY Ctr_lbsugres		"Počet výsledků v okně našeptávače (nastavení about:config)">
 
 <!ENTITY Ctr_menubar_items	"Umístění menu">
 <!ENTITY Ctr_extrabar		"Přídavné lišty">
