--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -37,7 +37,7 @@
 <!ENTITY Ctr_tabs2			"弧形标签页 (备选风格)">
 <!ENTITY Ctr_tabs3			"弧形标签页 (备选 Aero 风格)">
 <!ENTITY Ctr_tabforminfo	"标签页外观由当前的主题所控制">
-<!ENTITY Ctr_coltabsinfo	"标签页外观与 'ColorfulTabs' 扩展不能完全兼容!">
+<!ENTITY Ctr_coltabsinfo	"标签页外观与 “ColorfulTabs” 扩展不能完全兼容!">
 <!ENTITY Ctr_tabsontop0		"标签栏在顶部 (默认)">
 <!ENTITY Ctr_tabsontop1		"标签栏在顶部 --- [tabsontop=true] 属性">
 <!ENTITY Ctr_tabsontop2		"标签栏不在顶部 (v1) --- [tabsontop=false] 属性">
@@ -71,8 +71,8 @@
 <!ENTITY Ctr_closeonleft	"标签页上的备选位置">
 <!ENTITY Ctr_close_wwltab	"关闭最后一个可见标签页后关闭窗口 (about:config 选项)">
 
-<!ENTITY Ctr_hctpinfotab	"部分标签页变化与 'Hide Caption Titlebar Plus' 扩展不兼容。">
-<!ENTITY Ctr_hctpinfoab		"标题栏上的按钮与 'Hide Caption Titlebar Plus' 扩展不兼容。">
+<!ENTITY Ctr_hctpinfotab	"部分标签页变化与 “Hide Caption Titlebar Plus” 扩展不兼容。">
+<!ENTITY Ctr_hctpinfoab		"标题栏上的按钮与 “Hide Caption Titlebar Plus” 扩展不兼容。">
 
 <!ENTITY Ctr_appbutton		"应用程序按钮">
 <!ENTITY Ctr_appbutton0		"按钮已禁用">
@@ -156,7 +156,7 @@
 <!ENTITY Ctr_hidezoomres	"当缩放控制按钮在工具栏上时: 隐藏重置缩放按钮">
 <!ENTITY Ctr_alt_newtabp	"新标签页页面 (about:newtab): 备选的外观">
 <!ENTITY Ctr_ctroldsearch	"旧式搜索">
-<!ENTITY Ctr_ctroldsearchc	"Clear searchbox after search">
+<!ENTITY Ctr_ctroldsearchc	"搜索后清除搜索框">
 <!ENTITY Ctr_addonmanager	"附加组件管理器">
 <!ENTITY Ctr_alt_addonsp	"附加组件“更多”页面: 备选的外观">
 <!ENTITY Ctr_alt_addonsm	"附加组件管理器: 备选的外观">
