--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -15,7 +15,7 @@
 <!ENTITY Ctr_sidebarbutton	"側邊欄">
 <!ENTITY Ctr_windowcontrols	"最小化/最大化/關閉 (全螢幕)">
 <!ENTITY Ctr_rr				"需重啟 &brandShortName;!">
-<!ENTITY Ctr_window			"window">
+<!ENTITY Ctr_window			"視窗">
 
 <!ENTITY Ctr_cuibuttons		"按鈕">
 <!ENTITY Ctr_cuibutnormal	"標準圖示">
@@ -56,7 +56,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"小於 48px 的值有可能導致故障!">
 <!ENTITY Ctr_square_edges	"使分頁標籤四角為嚴格直角">
 <!ENTITY Ctr_tttitlebar		"將分頁標題文字顯示於 &brandShortName; 標題列">
-<!ENTITY Ctr_tabinsertion	"在網頁上點選連結時，將新分頁開啟於目前分頁的旁邊，即把預設行為 [a][b][c][1][2][3] 改為 [a][1][2][3][b][c] (about:config)">
+<!ENTITY Ctr_tabinsertion	"在網頁上點選連結時，將新分頁開啟於目前分頁的旁邊，即把預設行為 [a][b][c][1][2][3] 改為 [a][1][2][3][b][c] (about:config » browser.tabs.insertRelatedAfterCurrent)">
 <!ENTITY Ctr_emptyfavicon	"開啟的網頁若未提供網站圖示，仍在該分頁顯示空圖示">
 <!ENTITY Ctr_noemptypticon	"從釘選分頁移除空圖示">
 <!ENTITY Ctr_e10stab_notd	"e10s 分頁: 移除底線">
@@ -116,17 +116,17 @@
 <!ENTITY Ctr_bf_space		"減少按鈕間距 (如有可能)">
 <!ENTITY Ctr_noconicons		"右鍵選單的「回到上一頁、前進下一頁、停止載入、重新載入、加入書籤」由橫排圖示換回縱排文字風格">
 <!ENTITY Ctr_prefpage		"選項頁">
-<!ENTITY Ctr_altoptionsd	"Default appearance">
+<!ENTITY Ctr_altoptionsd	"預設外觀">
 <!ENTITY Ctr_altoptionsp	"換個外觀">
 <!ENTITY Ctr_altoptionsw	"用傳統式的彈出新視窗來開啟選項頁">
-<!ENTITY Ctr_altoptionsww	"Width">
-<!ENTITY Ctr_altoptionswh	"Height">
-<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
-<!ENTITY Ctr_options_rem	"Remember last selected category">
+<!ENTITY Ctr_altoptionsww	"寬度">
+<!ENTITY Ctr_altoptionswh	"高度">
+<!ENTITY Ctr_altoptionsi	"本套件模擬選項視窗將會是一個隱藏所有工具列的「瀏覽器視窗」。 若你在 [選項視窗]/[一般]/[首頁] 的設定頁內按下「使用目前頁面」按鈕，會將首頁網址設定變更為「about:preferences」，而非主瀏覽視窗的所有分頁。本套件會新增一個工具列按鈕，名為「選項(視窗)」，若你是第一次開啟本設定的話，可以在介面自訂模式中找到該按鈕。">
+<!ENTITY Ctr_options_rem	"記住上次選擇的選項分頁">
 <!ENTITY Ctr_svgfilters		"改變預設工具列按鈕圖示顏色">
 <!ENTITY Ctr_wincontrols	"可移動的全螢幕視窗控制項">
-<!ENTITY Ctr_oldtoplevimg	"'Top level domain' images: classic appearance">
-<!ENTITY Ctr_altalertbox	"'Alert box': alternative appearance">
+<!ENTITY Ctr_oldtoplevimg	"「頂層網域」圖示: 經典外觀">
+<!ENTITY Ctr_altalertbox	"「警示方塊」: 換個外觀">
 <!ENTITY Ctr_emptyfavicon2	"以白紙圖示取代空圖示">
 <!ENTITY Ctr_mstatusbar		"使狀態列可移動">
 <!ENTITY Ctr_mstatusbars4e	"狀態列由 Status-4-Evar 控制">
@@ -137,10 +137,10 @@
 <!ENTITY Ctr_stoprel1		"工具列: 將重新載入按鈕放在停止按鈕之後!">
 <!ENTITY Ctr_panelmenucol	"面板選單: 換個背景色彩">
 <!ENTITY Ctr_hideprivmask	"隱私瀏覽模式下，隱藏面具圖示">
-<!ENTITY Ctr_navsmallicons	"Small icons">
-<!ENTITY Ctr_navlargeicons	"Large icons">
-<!ENTITY Ctr_nbisizedelay0	"Initialization delay on browser startup">
-<!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sec)">
+<!ENTITY Ctr_navsmallicons	"小圖示">
+<!ENTITY Ctr_navlargeicons	"大圖示">
+<!ENTITY Ctr_nbisizedelay0	"瀏覽器啟動後的初始化延遲">
+<!ENTITY Ctr_nbisizedelay	"毫秒 (1000 毫秒 = 1 秒)">
 <!ENTITY Ctr_findbar		"尋找列位於">
 <!ENTITY Ctr_findbar_def	"預設位置">
 <!ENTITY Ctr_findbar_top	"頂部">
@@ -155,21 +155,21 @@
 <!ENTITY Ctr_cpanelmenus	"緊湊的面板選單(書籤、歷史等等.)">
 <!ENTITY Ctr_hidezoomres	"當縮放控制按鈕置於工具列上時，隱藏工具列上的縮放重設按鈕">
 <!ENTITY Ctr_alt_newtabp	"新分頁(九宮頁面) (about:newtab): 換個外觀">
-<!ENTITY Ctr_ctroldsearch	"Old search">
-<!ENTITY Ctr_ctroldsearchc	"Clear searchbox after search">
+<!ENTITY Ctr_ctroldsearch	"傳統搜尋列">
+<!ENTITY Ctr_ctroldsearchc	"搜尋後清除搜尋列">
 <!ENTITY Ctr_addonmanager	"附加元件管理員">
 <!ENTITY Ctr_alt_addonsp	"「更多資訊」頁面: 換個項目順序">
 <!ENTITY Ctr_alt_addonsm	"換個外觀">
 <!ENTITY Ctr_am_nowarning	"附加元件清單: 隱藏警告">
-<!ENTITY Ctr_am_compact		"Add-on lists: compact view">
-<!ENTITY Ctr_am_compact2	"Compact view +">
+<!ENTITY Ctr_am_compact		"附加元件清單: 緊湊風格">
+<!ENTITY Ctr_am_compact2	"緊湊風格 +">
 <!ENTITY Ctr_addonversion	"附加元件清單: 顯示附加元件版本號">
 <!ENTITY Ctr_xpinstallui	"使用傳統彈出式的附加元件安裝視窗 (about:config)">
 <!ENTITY Ctr_bmbutton		"書籤選單按鈕">
-<!ENTITY Ctr_bmbutpanelm	"Popup: 書籤選單使用和面板選單同風格的外觀">
-<!ENTITY Ctr_bmbunsortbm	"Popup: 'unsorted bookmarks' submenu">
-<!ENTITY Ctr_bmbviewbmtb	"Popup: show 'View Toolbar'">
-<!ENTITY Ctr_bmbnounsort	"Popup: hide 'unsorted bookmarks'">
+<!ENTITY Ctr_bmbutpanelm	"彈出式書籤選單: 書籤選單使用和面板選單同風格的外觀">
+<!ENTITY Ctr_bmbunsortbm	"彈出式書籤選單: 「未排序書籤」項目附加子選單">
+<!ENTITY Ctr_bmbviewbmtb	"彈出式書籤選單: 顯示「檢視書籤工具列」項目">
+<!ENTITY Ctr_bmbnounsort	"彈出式書籤選單: 隱藏「未排序書籤」項目">
 <!ENTITY Ctr_bmbutnotext	"當此按鈕位於書籤列時，隱藏按鈕文字標籤">
 <!ENTITY Ctr_skipprintpr	"列印按鈕: 跳過列印預覽">
 <!ENTITY Ctr_tbconmenu		"工具列右鍵選單: 隱藏 「移動至選單」、「自工具列移除」、「重新載入所有分頁」、「將所有分頁加入書籤」和「復原已關閉分頁」項目">
@@ -215,17 +215,17 @@
 
 <!ENTITY Ctr_urlbar			"網址列">
 <!ENTITY Ctr_starinurl		"星形書籤按鈕併入網址列">
-<!ENTITY Ctr_starinurlinfo	"Default bookmarks menu button gets hidden">
+<!ENTITY Ctr_starinurlinfo	"原書籤按鈕將被隱藏">
 <!ENTITY Ctr_feedinurl		"網址列中顯示消息來源訂閱按鈕">
 <!ENTITY Ctr_hideurelstop	"隱藏網址列中的停止與重新載入按鈕">
 <!ENTITY Ctr_hideurlgo		"隱藏「衝」按鈕">
 <!ENTITY Ctr_hideurlsrg		"隱藏「重新載入、停止載入、衝」按鈕兩側的分隔線和空白">
-<!ENTITY Ctr_urlbardropm	"Move dropmarker to the last possible position">
-<!ENTITY Ctr_altreaderico	"Alternative 'Reader' icons">
+<!ENTITY Ctr_urlbardropm	"將下拉式三角按鈕儘可能地移動到網址列最末端">
+<!ENTITY Ctr_altreaderico	"換個「閱讀模式」圖示">
 <!ENTITY Ctr_hideprbutton	"當彈出型廣告視窗被封鎖時，不顯示通知圖示">
-<!ENTITY Ctr_locsearchbw10	"Reduce location bars and search bars height (experimental)">
+<!ENTITY Ctr_locsearchbw10	"減少網址列和搜尋列高度 (實驗性)">
 <!ENTITY Ctr_urlbar_ib		"網站識別鈕 (身份區塊)">
-<!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
+<!ENTITY Ctr_ib_nohovcolor	"懸停時，不著上灰色底">
 <!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
 <!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_faviconurl		"網址列顯示網站圖示">
@@ -234,12 +234,12 @@
 <!ENTITY Ctr_padlock_def	"預設">
 <!ENTITY Ctr_padlock_cla	"經典風格">
 <!ENTITY Ctr_padlock_mod	"現代風格">
-<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
+<!ENTITY Ctr_padlock_ext	"在有效的「about:」頁面顯示「&brandShortName;」圖示">
 <!ENTITY Ctr_icopageinfo	"按下圖示，則開啟「頁面資訊」視窗">
-<!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
-<!ENTITY Ctr_searchbar		"Search bar">
-<!ENTITY Ctr_lbsugresi		"Display as many results in suggestions popup as possible (without scrollbar)">
-<!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
+<!ENTITY Ctr_lbsbsize		"自訂網址列與搜尋列的寬度">
+<!ENTITY Ctr_searchbar		"搜尋列">
+<!ENTITY Ctr_lbsugresi		"儘可能地顯示更多搜尋建議 (在不出現捲軸的情況下)">
+<!ENTITY Ctr_lbsugres		"搜尋建議數目 (about:config » browser.urlbar.maxRichResults)">
 
 <!ENTITY Ctr_menubar_items	"選單列併入">
 <!ENTITY Ctr_extrabar		"新增工具列">
@@ -276,7 +276,7 @@
 
 <!ENTITY Ctr_aerocolors		"將主工具列和分頁著上天藍色(Aero Blue)">
 <!ENTITY Ctr_transpttbw10	"標題列/選單列/分頁列: 移除背景色彩">
-<!ENTITY Ctr_transpttbew10	"Additional tweaks for some OS themes">
+<!ENTITY Ctr_transpttbew10	"對一些 OS 佈景的附加調整">
 <!ENTITY Ctr_transptcw10	"隱藏作業系統預設的 最小化/最大化/關閉 按鈕">
 <!ENTITY Ctr_hidenavbar		"隱藏瀏覽工具列">
 <!ENTITY Ctr_navbarpad		"增加左右邊距">
@@ -305,7 +305,7 @@
 <!ENTITY Ctr_tabanimation	"分頁關閉/開啟的動畫 (about:config)">
 <!ENTITY Ctr_dlanimation	"「下載通知」動畫 (about:config)">
 <!ENTITY Ctr_fsanimation	"全螢幕模式動畫 (about:config)">
-<!ENTITY Ctr_fsaduration	"HTML5 內容的全螢幕模式動畫 (about:config)"><!-- full-screen-api.transition-duration.* -->
+<!ENTITY Ctr_fsaduration	"HTML5 內容的全螢幕模式動畫 ( about:config » full-screen-api.transition-duration.* )">
 
 <!ENTITY Ctr_toolsitem		"工具選單中顯示 Classic Theme Restorer 項目">
 <!ENTITY Ctr_appmenuitem	"火狐橙選單中顯示 Classic Theme Restorer 項目">
@@ -318,13 +318,13 @@
 <!ENTITY Ctr_nodevtheme		"停用「Developer 佈景主題」">
 
 <!ENTITY Ctr_experttweaks	"進階">
-<!ENTITY Ctr_fx34search		"&brandShortName; 34+ 引入了「新搜尋列介面」。取消勾選這個核取方塊 ，則可恢復為「舊式搜尋列介面」。">
-<!ENTITY Ctr_fx34loop		"&brandShortName; 34+ 實作了「&brandShortName; Hello 即時通訊」功能。取消勾選這個核取方塊 ，則可移除這項功能。">
-<!ENTITY Ctr_fx35devtheme	"取消勾選這個核取方塊 ，則可停用「Developer 佈景主題」。">
-<!ENTITY Ctr_fx36prefs		"Unchecking this preference restores the old preference window.">
-<!ENTITY Ctr_fx36prefs2		"Note: Old preference window does not contain all recently added browser preferences!">
-<!ENTITY Ctr_fx38reader		"取消勾選這個核取方塊 ，則可停用「閱讀模式」，並將其按鈕從網址列移除。">
-<!ENTITY Ctr_fx38pocket		"取消勾選這個核取方塊 ，則可停用「Pocket」功能，並將「Pocket」按鈕從工具列移除。">
+<!ENTITY Ctr_fx34search		"&brandShortName; 34+ 引入了「新搜尋列介面」。取消勾選這個核取方塊，則可恢復為「舊式搜尋列介面」。">
+<!ENTITY Ctr_fx34loop		"&brandShortName; 34+ 實作了「&brandShortName; Hello 即時通訊」功能。取消勾選這個核取方塊，則可移除這項功能。">
+<!ENTITY Ctr_fx35devtheme	"取消勾選這個核取方塊，則可停用「Developer 佈景主題」。">
+<!ENTITY Ctr_fx36prefs		"取消勾選這個核取方塊，則可恢復舊式選項視窗。">
+<!ENTITY Ctr_fx36prefs2		"注意: 舊式選項視窗未包含所有最近新增的選項!">
+<!ENTITY Ctr_fx38reader		"取消勾選這個核取方塊，則可停用「閱讀模式」，並將其按鈕從網址列移除。">
+<!ENTITY Ctr_fx38pocket		"取消勾選這個核取方塊，則可停用「Pocket」功能，並將「Pocket」按鈕從工具列移除。">
 <!ENTITY Ctr_fx38pocket2	"註: 若「Pocket」按鈕在自訂模式面板中，同樣會被移除。">
 <!ENTITY Ctr_e_searchui		"搜尋列介面">
 <!ENTITY Ctr_e_loop			"Hello 即時通訊">
@@ -333,10 +333,10 @@
 <!ENTITY Ctr_e_readermode	"閱讀模式">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"分頁靜音按鈕">
-<!ENTITY Ctr_fx42tabsaudico	"取消勾選這個核取方塊 ，則可移除「分頁靜音按鈕」。">
+<!ENTITY Ctr_fx42tabsaudico	"取消勾選這個核取方塊，則可移除「分頁靜音按鈕」。">
 
 
-<!ENTITY Ctr_pw_settings	"設定">
+<!ENTITY Ctr_pw_settings	"設定值">
 <!ENTITY Ctr_pw_set_reset	"套件預設值">
 <!ENTITY Ctr_pw_set_predef	"經典設定值">
 <!ENTITY Ctr_pw_set_preaus	"&brandShortName; 預設值">
