--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -265,7 +265,7 @@
 <!ENTITY Ctr_hidetbwote2	"Titelleiste beibehalten (Tabs oben)">
 <!ENTITY Ctr_notabfog		"Hintergrundnebel entfernen (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_notabbg		"Hintergrundfarbe entfernen (Windows AeroGlass / Win8)">
-<!ENTITY Ctr_hightabpos		"Abstand über der Leiste reduzieren (falls möglich)">
+<!ENTITY Ctr_hightabpos		"Oberen Leistenabstand reduzieren (falls möglich)">
 <!ENTITY Ctr_alttabstb		"Alternative Hintergrundfarbe">
 <!ENTITY Ctr_alttabstb2		"Im maximierten Fenster (Tabs oben)">
 
