--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -74,14 +74,14 @@
 <!ENTITY Ctr_hctpinfotab	"Někotre rajtarkowe warianty z rozšěrjenjom 'Hide Caption Titlebar Plus' kompatibelne njejsu.">
 <!ENTITY Ctr_hctpinfoab		"Tłóčatko na titulnej lajsće z rozšěrjenjom 'Hide Caption Titlebar Plus' kompatibelne njeje.">
 
-<!ENTITY Ctr_appbutton		"Nałoženske tłóčatko">
+<!ENTITY Ctr_appbutton		"Tłóčatko &brandShortName;">
 <!ENTITY Ctr_appbutton0		"Tłóčatko znjemóžnjeny">
 <!ENTITY Ctr_appbutton1		"Tłóčatko na symbolowej lajsće">
 <!ENTITY Ctr_appbutton1wt	"Tłóčatko na symbolowej lajsće (jenož tekst)">
 <!ENTITY Ctr_appbutton2		"Tłóčatko na titulnej lajsće [&brandShortName;]">
 <!ENTITY Ctr_appbutton2h	"Tłóčatko na titulnej lajsće [&brandShortName;] (schowane)">
 <!ENTITY Ctr_appbutton2io	"Tłóčatko na titulnej lajsće [&brandShortName;] (jenož symbol)">
-<!ENTITY Ctr_paneluibtweak	"Menijowe tłóčatko jako nałoženske tłóčatko pokazać,...">
+<!ENTITY Ctr_paneluibtweak	"Menijowe tłóčatko jako tłóčatko &brandShortName; pokazać,...">
 <!ENTITY Ctr_paneluibtweak2	"...hdyž je na rajtarkowej lajsće">
 <!ENTITY Ctr_appbuttonc_o	"Tłóčatkowa barba: Oranžowy (standard)">
 <!ENTITY Ctr_appbuttonc_a	"Tłóčatkowa barba: Módry (Aurora)">
@@ -94,15 +94,15 @@
 <!ENTITY Ctr_appbuttonc_pu	"Tłóčatkowa barba: Purpur">
 <!ENTITY Ctr_appbuttonc_wh	"Tłóčatkowa barba: Běły">
 <!ENTITY Ctr_appbuttonc_cu	"Swójska tłóčatkowa barba">
-<!ENTITY Ctr_appbuttonct	"Custom button color for button on toolbar">
+<!ENTITY Ctr_appbuttonct	"Swójska barba za tłóčatko na symbolowej lajsće">
 <!ENTITY Ctr_appbuttonI1	"Nowy start doporučeny">
-<!ENTITY Ctr_appbuttonI1e	"Njeje widźomny w titulnej lajsće Windows, jenož w titulnej lajsće &brandShortName;!">
-<!ENTITY Ctr_appbuttonI2	"Tłóčatkowe barby su jenož widźomne na titulnej lajsće a rajtarkowej lajsće!">
+<!ENTITY Ctr_appbuttonI1e	"Jenož widźomny w titulnej lajsće &brandShortName;, nic na titulnej lajsće dźěłoweho systema Windows!">
+<!ENTITY Ctr_appbuttonI2	"Tłóčatkowe barby su jenož widźomne, jeli tłóčatko je na titulnej lajsće abo rajtarkowej lajsće!">
 <!ENTITY Ctr_appbutmhi		"Wyša pozicija (jeli je na rajtarkowej lajsće)">
 <!ENTITY Ctr_appbautocol	"Barbu wobhladowakoweho kanala awtomatisce nastajić (standard/Aurora/Nightly)">
 <!ENTITY Ctr_appbutbdl		"Ramiki a pozadkowe barby schować">
-<!ENTITY Ctr_dblclclosefx	"Dwójne kliknjenje začinja aktualne wokno">
-<!ENTITY Ctr_appbclmmenus	"Kliknjomne menije w tłóčatkowym meniju (Nowy rajtark, Ćišćeć...)">
+<!ENTITY Ctr_dblclclosefx	"Klikńće dwójce, zo byšće aktualne wokno začinił">
+<!ENTITY Ctr_appbclmmenus	"Kliknjomne menije w menijowym woknje (Nowy rajtark, Ćišćeć...)">
 <!ENTITY Ctr_appbutonclab	"Titul">
 <!ENTITY Ctr_appbutonclab2	"Titul přidać abo prózdne wostajić">
 
@@ -115,7 +115,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Meni historije přez tłóčenje tasty myše schować">
 <!ENTITY Ctr_bf_space		"Rum mjez tłóčatkami redukować (jeli móžno)">
 <!ENTITY Ctr_noconicons		"Symbole kontekstoweho menija strony přez pomjenowanja wuměnić (wróćo, dale, stój, znowa, stronu jako zapołožku składować)">
-<!ENTITY Ctr_prefpage		"Strona nastajenjow">
+<!ENTITY Ctr_prefpage		"Strona/wokno nastajenjow">
 <!ENTITY Ctr_altoptionsd	"Standardny zwonkowny napohlad">
 <!ENTITY Ctr_altoptionsp	"Alternatiwny zwonkowny napohlad">
 <!ENTITY Ctr_altoptionsw	"Strona nastajenjow we woknje wočinić">
@@ -156,7 +156,7 @@
 <!ENTITY Ctr_hidezoomres	"Skalowanske elementy na symbolowej lajsće: Tłóčatko za wróćostajenje skalowanja schować">
 <!ENTITY Ctr_alt_newtabp	"Strona noweho rajtarka (about:newtab): alternatiwny napohlad">
 <!ENTITY Ctr_ctroldsearch	"Stare pytanje">
-<!ENTITY Ctr_ctroldsearchc	"Clear searchbox after search">
+<!ENTITY Ctr_ctroldsearchc	"Po pytanju pytanske polo wuprózdnić">
 <!ENTITY Ctr_addonmanager	"Zrjadowak přidatkow">
 <!ENTITY Ctr_alt_addonsp	"Strona 'wjace info': alternatiwny porjad">
 <!ENTITY Ctr_alt_addonsm	"Alternatiwny napohlad">
@@ -166,10 +166,10 @@
 <!ENTITY Ctr_addonversion	"Lisćiny přidatkow: Wersiju přidatka pokazać">
 <!ENTITY Ctr_xpinstallui	"Stary přidatkowe instalowanske wokno (nastajenje about:config)">
 <!ENTITY Ctr_bmbutton		"Tłóčatko menija zapołožkow">
-<!ENTITY Ctr_bmbutpanelm	"Popup: napohlad wuskakowaceho menija">
-<!ENTITY Ctr_bmbunsortbm	"Popup: 'unsorted bookmarks' submenu">
-<!ENTITY Ctr_bmbviewbmtb	"Popup: show 'View Toolbar'">
-<!ENTITY Ctr_bmbnounsort	"Popup: hide 'unsorted bookmarks'">
+<!ENTITY Ctr_bmbutpanelm	"Wuskakowacy meni: napohlad wuskakowaceho menija">
+<!ENTITY Ctr_bmbunsortbm	"Wuskakowacy meni: podmeni 'Njesortěrowane zapołožki'">
+<!ENTITY Ctr_bmbviewbmtb	"Wuskakowacy meni: 'Lajstu zapołožkow pokazać' pokazać">
+<!ENTITY Ctr_bmbnounsort	"Wuskakowcy meni: 'Njesortěrowane zapołožki' schować">
 <!ENTITY Ctr_bmbutnotext	"Tekst na lajśce zapołožkow schować">
 <!ENTITY Ctr_skipprintpr	"Ćišćerske tłóčatko: ćišćerski přehlad přeskočić">
 <!ENTITY Ctr_tbconmenu		"Kontekstowy meni symboloweje lajsty: 'Do menija přesunyć', 'Ze symboloweje lajsty wotstronić', 'Wšě rajtarki znowa začitać/jako zapołožki składować' a 'Začinjenje rajtarka cofnyć' schować">
@@ -220,7 +220,7 @@
 <!ENTITY Ctr_hideurelstop	"Tłóčatce Stój a Znowa adresowych lajstow schować">
 <!ENTITY Ctr_hideurlgo		"Tłóčatko 'Start' schować">
 <!ENTITY Ctr_hideurlsrg		"Dźělatka a mjezery za tłošatka 'Znowa, Stój a Start' schować">
-<!ENTITY Ctr_urlbardropm	"Move dropmarker to the last possible position">
+<!ENTITY Ctr_urlbardropm	"Tłóčatko šipkoweho kónčka do poslednjeje móžneje pozicije přesunyć">
 <!ENTITY Ctr_altreaderico	"Alternatine 'čitakowe' symbolei">
 <!ENTITY Ctr_hideprbutton	"Zdźělenski symbol schować, hdyž so wuskakowace wokno blokuje">
 <!ENTITY Ctr_locsearchbw10	"Wysokosć adresowych a pytanskich polow redukować (eksperimentelne)">
@@ -236,10 +236,10 @@
 <!ENTITY Ctr_padlock_mod	"moderny">
 <!ENTITY Ctr_padlock_ext	"Symbol '&brandShortName;' za płaćiwe strony 'about'">
 <!ENTITY Ctr_icopageinfo	"Kliknjenje na symbol wočinja wokno 'Info wo stronje'">
-<!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
-<!ENTITY Ctr_searchbar		"Search bar">
-<!ENTITY Ctr_lbsugresi		"Display as many results in suggestions popup as possible (without scrollbar)">
-<!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
+<!ENTITY Ctr_lbsbsize		"Swójska šěrokosć za adresowe polo a pytanske polo">
+<!ENTITY Ctr_searchbar		"Pytanske polo">
+<!ENTITY Ctr_lbsugresi		"Tak wjele wuslědkow kaž móžno we wuskakowacym meniju namjetow pokazać (bjez suwanskeje lajsty)">
+<!ENTITY Ctr_lbsugres		"Ličba wuslědkow we wuskakowacym meniju namjetow (nastajenje about:config)">
 
 <!ENTITY Ctr_menubar_items	"Pozicija menijowych zapiskow">
 <!ENTITY Ctr_extrabar		"Přidatne symbolowe lajsty">
