--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -74,14 +74,14 @@
 <!ENTITY Ctr_hctpinfotab	"Někotare rejtarkowe warianty njejsu kompatibelne z rozšyrjenim 'Hide Caption Titlebar Plus'.">
 <!ENTITY Ctr_hctpinfoab		"Tłocašk na titelowej rědce njejo kompatibelny z rozšyrjenim 'Hide Caption Titlebar Plus'.">
 
-<!ENTITY Ctr_appbutton		"Nałožeński tłocašk">
+<!ENTITY Ctr_appbutton		"Tłocašk &brandShortName;">
 <!ENTITY Ctr_appbutton0		"Tłocašk znjemóžnjony">
 <!ENTITY Ctr_appbutton1		"Tłocašk na symbolowej rědce">
 <!ENTITY Ctr_appbutton1wt	"Tłocašk na symbolowej rědce (jano tekst)">
 <!ENTITY Ctr_appbutton2		"Tłocašk na titelowej rědce [&brandShortName;]">
 <!ENTITY Ctr_appbutton2h	"Tłocašk na titelowej rědce (schowany)">
 <!ENTITY Ctr_appbutton2io	"Tłocašk na titelowej rědce [&brandShortName;] (jano symbol)">
-<!ENTITY Ctr_paneluibtweak	"Menijowy tłocašk ako nałožeński tłocašk pokazaś,...">
+<!ENTITY Ctr_paneluibtweak "Menijowy tłocašk ako tłocašk &brandShortName; pokazaś,...">
 <!ENTITY Ctr_paneluibtweak2	"...gaž jo na rejtarkowej rědce">
 <!ENTITY Ctr_appbuttonc_o	"Tłocaškowa barwa: Oranžowy (standard)">
 <!ENTITY Ctr_appbuttonc_a	"Tłocaškkowa barwa: Módry (Aurora)">
@@ -94,15 +94,15 @@
 <!ENTITY Ctr_appbuttonc_pu	"Tłocaškowa barwa: Purpur">
 <!ENTITY Ctr_appbuttonc_wh	"Tłocaškowa barwa: Běły">
 <!ENTITY Ctr_appbuttonc_cu	"Swójska tłocaškowa barwa">
-<!ENTITY Ctr_appbuttonct	"Custom button color for button on toolbar">
+<!ENTITY Ctr_appbuttonct	"Swójska barwa za tłocašk na symbolowej rědce">
 <!ENTITY Ctr_appbuttonI1	"Nowy start dopórucony">
-<!ENTITY Ctr_appbuttonI1e	"Njejo widobny w titelowej rědce Windows!">
-<!ENTITY Ctr_appbuttonI2	"Tłocaškowe barwy su jano widobne na titelowej rědce a rejtarkowej rědce!">
+<!ENTITY Ctr_appbuttonI1e	"Jano widobny w titelnej rědce &brandShortName;, nic na titelnej rědce źěłowego systema Windows!">
+<!ENTITY Ctr_appbuttonI2	"Tłocaškowe barwy su jano widobne, jolic tłocašk jo na titelnej rědce abo rejtarkowej rědce!">
 <!ENTITY Ctr_appbutmhi		"Wuša pozicija (jolic jo na rejtarkowej rědce)">
 <!ENTITY Ctr_appbautocol	"Barwu wobglědowakowego kanala awtomatiski nastajiś (standard/Aurora/Nightly)">
 <!ENTITY Ctr_appbutbdl		"Ramiki a slězynowe barwy schowaś">
-<!ENTITY Ctr_dblclclosefx	"Dwójne kliknjenje zacynja aktualne wokno">
-<!ENTITY Ctr_appbclmmenus	"Kliknjobne menije w tłocaškowem meniju (Nowy rejtark, Śišćaś...)">
+<!ENTITY Ctr_dblclclosefx	"Klikniśo dwójcy, aby aktualne wokno zacynił">
+<!ENTITY Ctr_appbclmmenus	"Kliknjobne menije w menijowem woknje (Nowy rejtark, Śišćaś...)">
 <!ENTITY Ctr_appbutonclab	"Titel">
 <!ENTITY Ctr_appbutonclab2	"Titel pśidaś abo prozne wóstajiś">
 
@@ -115,7 +115,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Meni historije pśez tłocenje myškoweje tasty schowaś">
 <!ENTITY Ctr_bf_space		"Rum mjazy tłocaškami reducěrowaś (jolic móžno)">
 <!ENTITY Ctr_noconicons		"Symbole kontekstowego menija boka pśez pomjenjenja wuměniś (slědk, dalej, stoj, znowego, bok ako cytańske znamje składowaś)">
-<!ENTITY Ctr_prefpage		"Bok nastajenjow">
+<!ENTITY Ctr_prefpage		"Bok/Wokno nastajenjow">
 <!ENTITY Ctr_altoptionsd	"Standardny wenkowny naglěd">
 <!ENTITY Ctr_altoptionsp	"Alternatiwny wenkowny naglěd">
 <!ENTITY Ctr_altoptionsw	"Bok nastajenjow we woknje wócyniś">
@@ -156,7 +156,7 @@
 <!ENTITY Ctr_hidezoomres	"Skalěrowańske elementy na symbolowej rědce: Tłocašk za slědkstajenje skalěrowanja schowaś">
 <!ENTITY Ctr_alt_newtabp	"Bok nowego rejtarka (about:newtab): alternatiwne wuglědanje">
 <!ENTITY Ctr_ctroldsearch	"Stare pytanje">
-<!ENTITY Ctr_ctroldsearchc	"Clear searchbox after search">
+<!ENTITY Ctr_ctroldsearchc	"Pó pytanju pytańske pólo wuprozniś">
 <!ENTITY Ctr_addonmanager	"Zastojnik dodankow">
 <!ENTITY Ctr_alt_addonsp	"'Bok Dalšne info': alternatiwny pórěd">
 <!ENTITY Ctr_alt_addonsm	"Alternatiwny naglěd">
@@ -166,10 +166,10 @@
 <!ENTITY Ctr_addonversion	"Lisćiny dodankow: wersiju dodanka pokazaś">
 <!ENTITY Ctr_xpinstallui	"Stare dodankowe instalěrowańske wokno (nastajenje about:config)">
 <!ENTITY Ctr_bmbutton		"Tłocašk menija cytańskich znamjenjow">
-<!ENTITY Ctr_bmbutpanelm	"Popup: naglěd menijowego wuskokujucego wokna">
-<!ENTITY Ctr_bmbunsortbm	"Popup: 'unsorted bookmarks' submenu">
-<!ENTITY Ctr_bmbviewbmtb	"Popup: show 'View Toolbar'">
-<!ENTITY Ctr_bmbnounsort	"Popup: hide 'unsorted bookmarks'">
+<!ENTITY Ctr_bmbutpanelm	"Wuskokujucy meni: naglěd menijowego wuskokujucego wokna">
+<!ENTITY Ctr_bmbunsortbm	"Wuskokujucy meni: pódmeni 'Njesortěrowane cytańske znamjenja' submenu">
+<!ENTITY Ctr_bmbviewbmtb	"Wuskokujucy meni: 'Rědku cytańskich znamjenjow pokazaś' pokazaś">
+<!ENTITY Ctr_bmbnounsort	"Wuskokujucy meni: 'Njesortěrowane cytańske znamjenja' schowaś">
 <!ENTITY Ctr_bmbutnotext	"Tekst na rědce cytańskich znamjenjow schowaś">
 <!ENTITY Ctr_skipprintpr	"Śišćarski tłocašk: śišćarski pśeglěd pśeskócyś">
 <!ENTITY Ctr_tbconmenu		"Kontekstowy meni symboloweje rědki: 'do menija pśesunuś', 'ze symboloweje rědki wótpóraś', 'wšykne rejtaki znowego zacytaś/ako cytańske znamje składowaś' a 'rejtark zacyniś anulěrowaś' schowaś">
@@ -220,7 +220,7 @@
 <!ENTITY Ctr_hideurelstop	"Tłocaška Stoj a Znowego adresowych rědkow schowaś">
 <!ENTITY Ctr_hideurlgo		"Tłocašk 'Start' schowaś">
 <!ENTITY Ctr_hideurlsrg		"Źěleńske smužki a prozne znamjenja za tłocaški 'Znowego, stoj a Start' schowaś">
-<!ENTITY Ctr_urlbardropm	"Move dropmarker to the last possible position">
+<!ENTITY Ctr_urlbardropm	"Tłocašk špica šypki do slědneje móžneje pozicije pśesunuś">
 <!ENTITY Ctr_altreaderico	"Alternatiwne 'cytakowe' symbole">
 <!ENTITY Ctr_hideprbutton	"Zdźěleński symbol schowaś, gaž wuskokujuce wokno se blokěrujo">
 <!ENTITY Ctr_locsearchbw10	"Wusokosć adresowych a pytańskich pólow reducěrowaś (eksperimentelne)">
@@ -236,10 +236,10 @@
 <!ENTITY Ctr_padlock_mod	"moderny">
 <!ENTITY Ctr_padlock_ext	"Symbol '&brandShortName;' za płaśiwe boki 'about'">
 <!ENTITY Ctr_icopageinfo	"Kliknjenje na symbol wócynja wokno 'Info wó boku">
-<!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
-<!ENTITY Ctr_searchbar		"Search bar">
-<!ENTITY Ctr_lbsugresi		"Display as many results in suggestions popup as possible (without scrollbar)">
-<!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
+<!ENTITY Ctr_lbsbsize		"Swójska šyrokosć za adresowe pólo a pytańske pólo">
+<!ENTITY Ctr_searchbar		"Pytańske pólo">
+<!ENTITY Ctr_lbsugresi		"Tak wjele wuslědkow ako móžno we wuskokujucem meniju naraźenjow pokazaá (bźez suwańskeje rědki)">
+<!ENTITY Ctr_lbsugres		"Licba wuslědkow we wuskokujucem meniju naraźenjow (nastajenje about:config)">
 
 <!ENTITY Ctr_menubar_items	"Pozicija menijowych zapiskow">
 <!ENTITY Ctr_extrabar		"Pśidatne symbolowe rědki">
